force-app/main/default/objects/Court_Petition_Hearing__c/fields/Next_Hearing_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Hearing_Date_and_Time__c</fullName>
    <label>Next Hearing Date and Time</label>
    <type>DateTime</type>
</CustomField>