force-app/main/default/objects/Court_Petition_Hearing__c/fields/Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Service_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Case</label>
    <referenceTo>Service_Case__c</referenceTo>
    <relationshipLabel>Court Petition Hearings</relationshipLabel>
    <relationshipName>Court_Petition_Hearings</relationshipName>
    <type>Lookup</type>
</CustomField>